[gd_scene load_steps=11 format=2]

[ext_resource path="res://EconPhase/Income/IncomeContents.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Terminus.tres" type="DynamicFont" id=2]
[ext_resource path="res://EconPhase/Income/HomeworldStatusRow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utility/HorizontalRuler.tscn" type="PackedScene" id=4]
[ext_resource path="res://EconPhase/Income/1CpColonyRow.tscn" type="PackedScene" id=5]
[ext_resource path="res://EconPhase/Income/3CpColonyRow.tscn" type="PackedScene" id=6]
[ext_resource path="res://EconPhase/Income/5CpColonyRow.tscn" type="PackedScene" id=7]
[ext_resource path="res://EconPhase/Income/5CpMineral.tscn" type="PackedScene" id=8]
[ext_resource path="res://EconPhase/Income/10CpMineral.tscn" type="PackedScene" id=9]
[ext_resource path="res://Utility/TitleAmount.tscn" type="PackedScene" id=10]

[node name="IncomeContents" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 10.0
margin_right = -8.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 304.0
margin_bottom = 470.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="ScrollableIncomeSources" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="IncomeSources" type="VBoxContainer" parent="VBoxContainer/ScrollableIncomeSources"]
margin_right = 304.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Homeworld" type="VBoxContainer" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources"]
margin_right = 304.0
margin_bottom = 47.0

[node name="HWStatusLabel" type="Label" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Homeworld"]
margin_right = 304.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Homeworld Status:"
align = 1

[node name="HomeworldStatusRow" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Homeworld" instance=ExtResource( 3 )]
margin_right = 304.0
margin_bottom = 47.0
value = 20

[node name="HorizontalRuler" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources" instance=ExtResource( 4 )]
margin_top = 51.0
margin_right = 304.0
margin_bottom = 59.0

[node name="Colonies" type="VBoxContainer" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources"]
margin_top = 63.0
margin_right = 304.0
margin_bottom = 242.0
size_flags_vertical = 3
custom_constants/separation = 18

[node name="Title" type="Label" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Colonies"]
margin_right = 304.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Colony Income:"
align = 1

[node name="1CpColonyRow" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Colonies" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 32.0
margin_right = 304.0
margin_bottom = 61.0
alignment = 0

[node name="3CpColonyRow" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Colonies" instance=ExtResource( 6 )]
margin_left = 0.0
margin_top = 79.0
margin_right = 304.0
margin_bottom = 108.0
alignment = 0

[node name="5CpColonyRow" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Colonies" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 126.0
margin_right = 304.0
margin_bottom = 155.0
alignment = 0

[node name="HorizontalRuler2" type="Panel" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources"]
margin_top = 246.0
margin_right = 304.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 8 )

[node name="Minerals" type="VBoxContainer" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources"]
margin_top = 258.0
margin_right = 304.0
margin_bottom = 438.0
size_flags_vertical = 3
custom_constants/separation = 18

[node name="Label" type="Label" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Minerals"]
margin_right = 304.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Minerals Collected:"
align = 1

[node name="5CpMineral" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Minerals" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 32.0
margin_right = 304.0
margin_bottom = 61.0
alignment = 0

[node name="10CpMineral" parent="VBoxContainer/ScrollableIncomeSources/IncomeSources/Minerals" instance=ExtResource( 9 )]
margin_left = 0.0
margin_top = 79.0
margin_right = 304.0
margin_bottom = 108.0
alignment = 0

[node name="Misc" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 438.0
margin_right = 304.0
margin_bottom = 470.0
alignment = 1

[node name="CarryOver" parent="VBoxContainer/Misc" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 32.0
size_flags_horizontal = 3
title = "Carry-Over"

[node name="SubTotal" parent="VBoxContainer/Misc" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 154.0
margin_right = 304.0
margin_bottom = 32.0
size_flags_horizontal = 3
title = "Sub-Total"

[connection signal="value_changed" from="VBoxContainer/ScrollableIncomeSources/IncomeSources/Homeworld/HomeworldStatusRow" to="." method="_on_HomeworldStatusRow_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollableIncomeSources/IncomeSources/Colonies/1CpColonyRow" to="." method="_on_1CpColonyRow_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollableIncomeSources/IncomeSources/Colonies/3CpColonyRow" to="." method="_on_3CpColonyRow_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollableIncomeSources/IncomeSources/Colonies/5CpColonyRow" to="." method="_on_5CpColonyRow_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollableIncomeSources/IncomeSources/Minerals/5CpMineral" to="." method="_on_5CpMineral_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollableIncomeSources/IncomeSources/Minerals/10CpMineral" to="." method="_on_10CpMineral_value_changed"]
